HHH-5928 - Clean up compilation warnings